New matching program and library
A new matching library and program have been added to Gnuastro. Currently
it only works on catalogs. In the future, it will also return the rotation
matrix to match images or give the matrix to register two catalogs. So this
is just the start of an exciting new tool in Gnuastro.

Other changes that were done with this commit:

 - We were using custom functions to parse comma-separated floating point
   numbers (possibly as fractions) for each program (in Crop and
   MakeProfiles until this commit). Since we needed a similar operation in
   Match, a new `gal_options_parse_csv_float64' function was defined and is
   now used in those programs is well.

 - In the book, in the description of `gal_table_read', we claim that if
   NULL is given to `cols', then the whole table will be returned. But it
   was not behaving like this. It would return NULL when `cols==NULL'. This
   behavior is now corrected to be as described in the book.

 - Following the change above, in the Table program, we now pring the
   column in formation cleanly in a separate function.

 - The new `gal_box_bound_ellipse_extent' is added to the library to give
   the exact (floating point) extent of an ellipse. `gal_box_bound_ellipse'
   also uses this function now.

 - `gal_checkset_dataset_name' is now available to return the file name
   (and possible HDU if its a FITS file) as a string. This is useful in
   error messages where the input can be plain text or FITS.

--- a/Makefile.am
+++ b/Makefile.am
@@ -68,6 +68,9 @@ endif
 if COND_FITS
   MAYBE_FITS = bin/fits
 endif
+if COND_MATCH
+  MAYBE_MATCH = bin/match
+endif
 if COND_MKCATALOG
   MAYBE_MKCATALOG = bin/mkcatalog
 endif
@@ -109,10 +112,10 @@ endif
 ## having an uncommented `MAYBE_TEMPLATE' as a value in `SUBDIRS'.
 SUBDIRS = bootstrapped/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_ARITHMETIC)  \
   $(MAYBE_BUILDPROG) $(MAYBE_CONVERTT) $(MAYBE_CONVOLVE)                 \
-  $(MAYBE_COSMICCAL) $(MAYBE_CROP) $(MAYBE_FITS) $(MAYBE_MKCATALOG)      \
-  $(MAYBE_MKNOISE) $(MAYBE_MKPROF) $(MAYBE_NOISECHISEL)                  \
-  $(MAYBE_STATISTICS) $(MAYBE_TABLE) $(MAYBE_TEMPLATE) $(MAYBE_WARP) doc \
-  tests
+  $(MAYBE_COSMICCAL) $(MAYBE_CROP) $(MAYBE_FITS) $(MAYBE_MATCH)          \
+  $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)                    \
+  $(MAYBE_NOISECHISEL) $(MAYBE_STATISTICS) $(MAYBE_TABLE)                \
+  $(MAYBE_TEMPLATE) $(MAYBE_WARP) doc tests
 
 
 
