--- a/bin/match/astmatch.conf
+++ b/bin/match/astmatch.conf
@@ -1,5 +1,5 @@
-# Default parameters (System) for TEMPLATE.
-# TEMPLATE is part of GNU Astronomy Utilities.
+# Default parameters (System) for Match.
+# Match is part of GNU Astronomy Utilities.
 #
 # Use the long option name of each parameter followed by a value. The name
 # and value should be separated by atleast one white-space character (for
@@ -7,12 +7,21 @@
 #
 # For more information, please run these commands:
 #
-#  $ astTEMPLATE --help                  # Full list of options, short doc.
-#  $ astTEMPLATE -P                      # Print all options and used values.
-#  $ info astTEMPLATE                    # All options and input/output.
+#  $ astmatch --help                     # Full list of options, short doc.
+#  $ astmatch -P                         # Print all options and used values.
+#  $ info astmatch                       # All options and input/output.
 #  $ info gnuastro "Configuration files" # How to use configuration files.
 #
 # Copying and distribution of this file, with or without modification, are
 # permitted in any medium without royalty provided the copyright notice and
 # this notice are preserved.  This file is offered as-is, without any
 # warranty.
+
+# Input
+ hdu2            1
+
+# Catalog matching
+ ccol1           2
+ ccol1           3
+ ccol2           2
+ ccol2           3
