User -I and -L values in BuildProgram's configuration file
When the user passes special values to the `-I' and `-L' compilation
options through the `CPPFLAGS' and `LDFLAGS' directories at configure time
(for example if GSL is installed in a non-standard place), it is also
necessary to pass those directories to BuildProgram. This was not done
until now, so it would fail at `make check'.

We now read the values to `CPPFLAGS' and `LDFLAGS' at configure time and in
BuildProgram's `Makefile.am', we write these values into a new
configuration file which is in the build directory and will be used for
checks and installed. Therefore, the original BuildProgram configuration
file (in the source directory) is now called `astbuildprog.conf.in'.

This issue was found by Michel Tallon.

This fixes bug #53122.

--- a/bin/buildprog/Makefile.am
+++ b/bin/buildprog/Makefile.am
@@ -35,9 +35,46 @@ bin_PROGRAMS = astbuildprog
 
 astbuildprog_LDADD = -lgnuastro
 
-astbuildprog_SOURCES = main.c ui.c buildprog.c
+astbuildprog_SOURCES = main.c ui.c buildprog.c astbuildprog.conf
 
-EXTRA_DIST = main.h authors-cite.h args.h ui.h buildprog.h
+EXTRA_DIST = main.h authors-cite.h args.h ui.h buildprog.h astbuildprog.conf.in
+
+
+
+
+
+# Build the final configuration file. The main problem is the possible
+# CPPFLAGS and LDFLAGS that the user might have given at configure time
+# (stored in `IN_CPPFLAGS' and `IN_LDFLAGS' Makefile
+# variables). BuildProgram also needs to know these directories in order to
+# compile its programs. Here, we will be going
+astbuildprog.conf: $(top_srcdir)/bin/buildprog/astbuildprog.conf.in
+	cp $< $@
+	infoadded="no";                                \
+	for i in $(IN_CPPFLAGS); do                    \
+          if test x"$$i" != x; then                    \
+	    if test $$infoadded = "no"; then           \
+	      echo "" >> $@;                           \
+	      echo "# Installation information" >> $@; \
+	      infoadded="yes";                         \
+	    fi;                                        \
+	    v=$$(echo $$i | sed -e 's/-I//');          \
+	    echo " includedir $$v" >> $@;              \
+          fi;                                          \
+	done;                                          \
+	for i in $(IN_LDFLAGS); do                     \
+          if test x"$$i" != x; then                    \
+	    if test $$infoadded = "no"; then           \
+	      echo "" >> $@;                           \
+	      echo "# Installation information" >> $@; \
+	      infoadded="yes";                         \
+	    fi;                                        \
+	    v=$$(echo $$i | sed -e 's/-L//');          \
+	    echo " linkdir $$v" >> $@;                 \
+	  fi;                                          \
+	done
+
+
 
 
 
