Added programs made during tests to .gitignore
The executable files created by the library tests during `make check'
weren't in `.gitignore'. They are now added.

--- a/.gitignore
+++ b/.gitignore
@@ -107,11 +107,14 @@ doc/stamp-vti
 astarithmetic
 aststatistics
 astnoisechisel
+tests/simpleio
 astsubtractsky
 autom4te.cache
 lib/gnuastro.pc
 doc/gnuastro.cps
 doc/gnuastro.vrs
+tests/versioncxx
+tests/multithread
 lib/gnuastro/config.h
 
 
